# pipetron

./: .clangd  .gitignore  README.md  TODO.md  main.cpp  meson.build
.github/: README.md
src/: main.cpp  playground.cpp
src/includes/: nodes_manager.hpp
src/systemd/user/: pipetron.service.in
tests/: playground.cpp  virtual_with_main_core.cpp
